<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/fondo_blanco"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="423dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/logopuntocom" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSISJOR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/app_name"
                    android:textColor="#D1C12A"
                    android:textSize="70sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/textDesc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editUser"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/EditLogin"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:padding="10sp"
                    android:autofillHints="username"
                    android:textAlignment="center"
                    android:ems="10"
                    android:hint="@string/user"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textColorHint="#4E4B4B"
                    android:inputType="textPersonName"
                    tools:ignore="HardcodedText"
                    android:focusable="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/EditLogin"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:padding="10sp"
                    android:autofillHints="password"
                    android:textAlignment="center"
                    android:ems="10"
                    android:hint="Contraseña"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textColorHint="#4E4B4B"
                    android:inputType="textPassword"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/boton_login"
                    android:text="@string/btnLogin"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText"
                    android:onClick="login"/>

            </RelativeLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="100sp"
        android:textAlignment="center"
        android:text="SISJOR V1.0.5"
        android:textSize="20sp"/>

</LinearLayout>
